views: don't impose minimum sizes on comboboxes

It looks quite bad. This was an unintended regression from the fixed-width
look. Adding a test for this regression is unfortunately difficult - mocking
out the MenuController used by a single MenuItemView is complex to do.

Bug: 837158
Change-Id: Ie2e094a69c1d25bbcf8b53cfd66da4dec51e0f1b
Reviewed-on: https://chromium-review.googlesource.com/1030038
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554491}
Former-commit-id: 3ca3f90e4f51a96d0a5aec9915406898a2ff4058